partman-auto (51) UNRELEASED; urgency=low

  * Also set free_type in wipe_disk as that is needed by the function
    create_primary_partitions. This allows partman-auto-lvm to actually create
    the /boot partition as a primary partition.

 -- Frans Pop <fjp@debian.org>  Fri, 31 Mar 2006 00:38:12 +0200

partman-auto (50) unstable; urgency=low

  [ Sven Luther ]
  * [powerpc] Added lvm auto-partitioning support to prep and ibm_chrp
    recipes.
  * [powerpc] Added chrp_pegasos, oldworld and apus recipes.
  * [powerpc] Fixed boot-prep -> prep renaming.
    boot-prep died in libparted on january 2005, well before the sarge release.

  [ Frans Pop ]
  * recipes.sh: make code to select a recipe directory into separate function.

  [ Martin Michlmayr ]
  * Add support for the Broadcom BCM91480B evaluation board (aka "BigSur").
  * Rename sb1-swarm-bn recipes to sb1-bcm91250a for consistency.

  [ Updated translations ]
  * Bosnian (bs.po) by Safir Secerovic
  * Catalan (ca.po) by Jordi Mallach
  * Galician (gl.po) by Jacobo Tarrio
  * Hungarian (hu.po) by SZERVÑC Attila
  * Japanese (ja.po) by Kenshi Muto
  * Swedish (sv.po) by Daniel Nylander

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 17 Mar 2006 22:23:32 +0000

partman-auto (49) unstable; urgency=low

  * Enable auto-lvm in partitioning schemes for Sparc.

  [ Updated translations ]
  * Hungarian (hu.po) by SZERVÑC Attila
  * Slovenian (sl.po) by Matej Kovačič

 -- Frans Pop <fjp@debian.org>  Mon, 13 Feb 2006 12:38:08 +0100

partman-auto (48) unstable; urgency=low

  * Make sure no .svn directories get included in the package.

 -- Frans Pop <fjp@debian.org>  Sat, 28 Jan 2006 17:16:38 +0100

partman-auto (47) unstable; urgency=low

  [ Updated translations ]
  * Bulgarian (bg.po) by Ognyan Kulev
  * Catalan (ca.po) by Jordi Mallach
  * Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
  * Finnish (fi.po) by Tapio Lehtonen
  * Galician (gl.po) by Jacobo Tarrio
  * Hebrew (he.po) by Lior Kaplan