@@ -27,7 +27,7 @@ fi
 db_progress START 0 5 partman-auto/text/automatically_partition
 db_progress INFO partman-auto/progress/info
 
-decode_recipe $recipe
+decode_recipe $recipe default
 
 db_progress STEP 1
 
