@@ -28,7 +28,11 @@ autopartitioning_failed () {
 unnamed=0
 
 decode_recipe () {
-    local ram line word min factor max fs -
+    local ignore ram line word min factor max fs -
+    ignore=''
+    if [ "$2" ]; then
+	ignore="${2}ignore"
+    fi
     unnamed=$(($unnamed + 1))
     ram=$(grep ^Mem: /proc/meminfo | { read x y z; echo $y; }) # in bytes
     if [ -z "$ram" ]; then
@@ -93,10 +97,16 @@ decode_recipe () {
 		esac
 		shift; shift; shift; shift
 		line="$min $factor $max $fs $*"
-		if [ "$scheme" ]; then
-		    scheme="${scheme}${NL}${line}"
+
+		# Exclude partitions that have ...ignore set
+		if [ "$ignore" ] && [ "$(echo $line | grep "$ignore")" ]; then
+		    :
 		else
-		    scheme="$line"
+		    if [ "$scheme" ]; then
+			scheme="${scheme}${NL}${line}"
+		    else
+			scheme="$line"
+		    fi
 		fi
 		line=''
 		;;
@@ -287,7 +297,7 @@ choose_recipe () {
     db_get partman-auto/expert_recipe_file
     if [ ! -z "$RET" ] && [ -e "$RET" ]; then
         recipe="$RET"
-	decode_recipe $recipe
+	decode_recipe $recipe $2
 	if [ $(min_size) -le $free_size ]; then
 	    return 0
 	fi
@@ -302,7 +312,7 @@ choose_recipe () {
     old_default_recipe="$RET"
     for recipe in $recipedir/*; do
 	[ -f "$recipe" ] || continue
-	decode_recipe $recipe
+	decode_recipe $recipe $2
 	if [ $(min_size) -le $free_size ]; then
 	    choices="${choices}${recipe}${TAB}${name}${NL}"
 	    if [ no = "$default_recipe" ]; then
