@@ -3,6 +3,15 @@ partman-auto (51) UNRELEASED; urgency=low
   * Also set free_type in wipe_disk as that is needed by the function
     create_primary_partitions. This allows partman-auto-lvm to actually create
     the /boot partition as a primary partition.
+  * Allow to include definitions of partitions in regular recipes that should
+    only be used for a certain type of auto partitioning. This is useful to
+    allow e.g. a definition for a /boot partition to be included that is not
+    to be used for regular auto partitioning, but is needed for auto-lvm.
+    The actual implementation is in reverse as that seems more flexible: a
+    partition can be marked using "$<type>ignore" (where <type> is default or
+    lvm) and will then not be included. Multiple ignore marks are possible.
+    To implement this, the functions choose_recipe and decode_recipe now take
+    an extra argument indicating the type of autopartitioning being done.
 
  -- Frans Pop <fjp@debian.org>  Fri, 31 Mar 2006 00:38:12 +0200
 
